# polycubes-dodds

./: Cargo.toml  readme.md
n21-AWS-output/: 10d:16h:40m.txt
src/: copilot.rs  main.rs  mainv1.rs  mainv2-A001931.rs  mainv2.rs
